// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cv.internal.gerrit.updater;

option go_package = "go.chromium.org/luci/cv/internal/gerrit/updater;updater";

import "google/protobuf/timestamp.proto";

// RefreshGerritCL fetches latest Gerrit data and saves it to a CL snapshot.
//
// Queue: "refresh-gerrit-cl".
message RefreshGerritCL {
  string luci_project = 1;
  string host = 2;
  int64 change = 3;

  // Optional fields.
  google.protobuf.Timestamp updated_hint = 4;
  int64 clid_hint = 5;

  reserved 6; // force_notify
}

// BatchRefreshGerritCL is a batch of RefreshGerritCL tasks.
//
// Queue: "refresh-gerrit-cl".
message BatchRefreshGerritCL {
  repeated RefreshGerritCL tasks = 1;
}
